[gd_scene load_steps=19 format=3 uid="uid://cl11kttakgeyi"]

[ext_resource type="Script" uid="uid://cfll5onfr4i2x" path="res://pause_layer.gd" id="1_mqrtn"]
[ext_resource type="Texture2D" uid="uid://cbiyaa5qtdgev" path="res://pause_button.png" id="2_ah0nl"]
[ext_resource type="Texture2D" uid="uid://dm17he620afdl" path="res://pause_button2.png" id="3_b18ab"]
[ext_resource type="Texture2D" uid="uid://dcb65r0f41yna" path="res://test pause.png" id="4_iqvdr"]
[ext_resource type="Texture2D" uid="uid://cehgj63kgbr27" path="res://pause_window.png" id="5_v30ie"]
[ext_resource type="Texture2D" uid="uid://c78d2t2ea8qop" path="res://text_pause.png" id="6_2pemd"]
[ext_resource type="Texture2D" uid="uid://8o7fas7ua5r4" path="res://save_button.png" id="7_ie3y8"]
[ext_resource type="Texture2D" uid="uid://brqsljxqghhe8" path="res://save_button2.png" id="8_o8tb1"]
[ext_resource type="Texture2D" uid="uid://w165dthcjwjd" path="res://load_button.png" id="9_up16s"]
[ext_resource type="Texture2D" uid="uid://cu4dm4gkf7kgh" path="res://load_button2.png" id="10_e7lry"]
[ext_resource type="Texture2D" uid="uid://bodyyw0s61k44" path="res://menu_button.png" id="11_wqxsy"]
[ext_resource type="Texture2D" uid="uid://bae1yunyl3txg" path="res://menu_button2.png" id="12_j8w1v"]
[ext_resource type="Texture2D" uid="uid://qixfw15wsdr" path="res://pause_close_button.png" id="13_elpdy"]
[ext_resource type="Texture2D" uid="uid://bwv3spn8ikpqc" path="res://pause_close_button2.png" id="14_saqa3"]
[ext_resource type="Texture2D" uid="uid://c0nsvh3616j8l" path="res://settings_button.png" id="15_56iug"]
[ext_resource type="Texture2D" uid="uid://cjn0usnix7e6t" path="res://settings_button2.png" id="16_yu2v8"]
[ext_resource type="Texture2D" uid="uid://ddcdcyrc668jw" path="res://exit_button.png" id="17_khi8l"]
[ext_resource type="Texture2D" uid="uid://bfc0ua4yt840j" path="res://exit_button2.png" id="18_fmejt"]

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mqrtn")

[node name="PauseWindow" type="Node2D" parent="."]

[node name="TestPause" type="Sprite2D" parent="PauseWindow"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("4_iqvdr")

[node name="ColorRect" type="ColorRect" parent="PauseWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -11.0
offset_right = 1926.0
offset_bottom = 1102.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.17254902)

[node name="PauseWindow" type="Sprite2D" parent="PauseWindow"]
position = Vector2(960, 540)
texture = ExtResource("5_v30ie")

[node name="TextPause" type="Sprite2D" parent="PauseWindow"]
position = Vector2(773, 232)
texture = ExtResource("6_2pemd")

[node name="TextureButton" type="TextureButton" parent="PauseWindow"]
offset_left = 590.0
offset_top = 350.0
offset_right = 950.0
offset_bottom = 520.0
texture_normal = ExtResource("7_ie3y8")
texture_pressed = ExtResource("8_o8tb1")

[node name="TextureButton2" type="TextureButton" parent="PauseWindow"]
offset_left = 590.0
offset_top = 560.0
offset_right = 950.0
offset_bottom = 730.0
texture_normal = ExtResource("9_up16s")
texture_pressed = ExtResource("10_e7lry")

[node name="MenuButton" type="TextureButton" parent="PauseWindow"]
offset_left = 590.0
offset_top = 770.0
offset_right = 950.0
offset_bottom = 939.0
texture_normal = ExtResource("11_wqxsy")
texture_pressed = ExtResource("12_j8w1v")

[node name="ResumeButton" type="TextureButton" parent="PauseWindow"]
offset_left = 1150.0
offset_top = 150.0
offset_right = 1330.0
offset_bottom = 320.0
texture_normal = ExtResource("13_elpdy")
texture_pressed = ExtResource("14_saqa3")

[node name="TextureButton5" type="TextureButton" parent="PauseWindow"]
offset_left = 1150.0
offset_top = 560.0
offset_right = 1330.0
offset_bottom = 730.0
texture_normal = ExtResource("15_56iug")
texture_pressed = ExtResource("16_yu2v8")

[node name="QuitButton" type="TextureButton" parent="PauseWindow"]
offset_left = 1150.0
offset_top = 770.0
offset_right = 1330.0
offset_bottom = 939.0
texture_normal = ExtResource("17_khi8l")
texture_pressed = ExtResource("18_fmejt")

[node name="OpenButton" type="TextureButton" parent="."]
offset_left = 1711.0
offset_top = 26.0
offset_right = 1891.0
offset_bottom = 196.0
texture_normal = ExtResource("2_ah0nl")
texture_pressed = ExtResource("3_b18ab")

[connection signal="pressed" from="PauseWindow/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseWindow/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseWindow/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
